# plytoplane

./: 1CD0.cif  1fvm.ply  CMakeCache.txt  CMakeLists.txt  Makefile  PLY.cpp  PLY.h  README.md  TESTS.md  cmake_install.cmake  main.cpp  main.ipynb  plytoplane
PSBColors/: Makefile  PSBColors.cpp  PSBColors.h  a.out  colors.b  main.c
data/planes/: test.ply.plane
data/results/: test.ply
libs/lib/: libpng16.16.dylib  libpng16.la
libs/lib/pkgconfig/: libpng16.pc
python/: spherical_coordinates_test.py
tests/: hypothesis.cpp
